@@ -3091,7 +3091,7 @@
     ],
     "iconIndex": 373,
     "name": "Wyvern's Fury (Tome)",
-    "note": "<Cannot Rename>\n\n<Synthesis Ingredients>\nBlank Tome\nDraconic Wand\nEnchanted Dragon Scale\nWind Catalyst\nWind Essence: 5\n</Synthesis Ingredients>\n<Mask Name: AoE Wind Spell>\n<Synthesis SE: Book2>",
+    "note": "<Cannot Rename>\n\n<Synthesis Ingredients>\nDraconic Wand\nEnchanted Dragon Scale\nWind Catalyst\nWind Essence: 5\n</Synthesis Ingredients>\n<Mask Name: AoE Wind Spell>\n<Synthesis SE: Book2>",
     "params": [
       0,
       0,
