@@ -5172,7 +5172,7 @@
   {
     "id": 177,
     "animationId": 0,
-    "consumable": false,
+    "consumable": true,
     "damage": {
       "critical": false,
       "elementId": 0,
@@ -5180,17 +5180,17 @@
       "type": 0,
       "variance": 20
     },
-    "description": "An empty magical tome with no remarkable properties.\nIt is, however, very useful in certain crafting recipes.",
+    "description": "",
     "effects": [],
     "hitType": 0,
-    "iconIndex": 225,
+    "iconIndex": 0,
     "itypeId": 1,
-    "name": "Blank Tome",
-    "note": "",
-    "occasion": 3,
-    "price": 300,
+    "name": "",
+    "note": "Was once the Blank Tome.",
+    "occasion": 0,
+    "price": 0,
     "repeats": 1,
-    "scope": 0,
+    "scope": 7,
     "speed": 0,
     "successRate": 100,
     "tpGain": 0
