@@ -22,6 +22,7 @@ Changes:
   ~ MAT: 65 → 70
   ~ Draconic Healing Thresholds: 75% 50% 25% 10% → 80% 60% 40% 20%
  - Ice II (Tome) now obtained in Frozen Labyrinth chest instead of dropped by Frozen Labyrinth enemies.
+ - Removed the Blank Tome.
  - Nerfed Bat Sling drop rate from 5% to 2%.
  - Removed Outgoing Elemental Damage in favor of just amplifying every element rate.
  - Reworked Attributes menu stat colorations.
